Added files_Dec 15

--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" name="description" content="Samprit Ghosh Homepage">
+    <meta name="keywords" content="samprit ghsh math homepage phd grad student">
+    <title>Samprit's Homepage</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="javascript.js"></script>
+  </head>
+  <body>
+  <div id="headpart">
+      <div class="block4">
+    	   <div id="headtext">
+    		     <a style="color:#ffffff; font-family: georgia, serif; font-size:26pt; font-style:italic; ">Samprit Ghosh</a> <br>
+    		     <a style="color:#ffffff; font-family: times, serif; font-size:16pt;">PhD Student, Department of Mathematics, University of Toronto</a>
+    		 </div>
+
+    </div>
+    </div>
+
+    <div class="topnav" id="myTopnav">
+      <a href="index.html" class="active">Home</a>
+      <a href="research.html" >Research</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="talks.html">Talks and Activities</a>
+      <a href="contact.html">Contact</a>
+      <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        <i class="fa fa-bars"></i>
+
+    </div>
+
+    <div class="block3">
+        <h2> About me </h2>
+        <p>
+
+          I am a PhD candidate in the Department of Mathematics, University of Toronto since 2017. I am a part of the research team at <a href="https://www.math.toronto.edu/ganita/index.htm" style="font-size:100%;color:#51371a;font-weight:bold" ><u>GANITA Lab</u></a>  and
+          my supervisor is :  <a href="http://murty.math.toronto.edu" style="font-size:100%;color:#51371a;font-weight:bold" ><u>Prof. V. Kumar Murty </u> </a>
+  <br>
+  <br>
+My primary research is in Analytic Number Theory and Arithmetic Geometry. <br><br> I am also interested in applications of number theory in Cryptography and related areas. In 2019-20, I was involved with the <a href="http://www.fields.utoronto.ca/activities/18-19/smart-villages" style="font-size:100%;color:#51371a;font-weight:bold" ><u> Smart Villges</u></a>  project focusing on privacy and security of medical data in a distributed e-health Architecture.
+<br>
+<br>
+Before coming to Toronto, I attended <a href="http://www.iitb.ac.in" style="font-size:100%;color:#51371a;font-weight:bold" ><u>IIT Bombay</u></a> and my advisor was <a href="https://www.math.iitb.ac.in/~srg/" style="font-size:100%;color:#51371a;font-weight:bold" ><u> Prof. Sudhir Ghorpade.</u></a>
+<br><br>
+<p> <a href="papers/CV_Samprit_Ghosh.pdf"style="font-size:130%;color:#0047AB;font-weight:bold">Curriculum Vitae </a></p>
+Email : samprit.ghosh at math.utoronto.ca
+
+</a>  </p>
+        <br><br>
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <img src="image/wavyflower.svg">        <br><br><br>
+
+        <!-- <p> <img src="designending.svg" alt=""; align="left"> <img src="designending.svg" alt=""; align="left"> </p> -->
+      </div>
+
+      <div class="block5">
+    		      <img src="image/Samprit.jpg" style="height : 270px;">
+
+    	    <br>
+    	 <a style="font-family: times, serif; font-size:9pt;">   Photo taken at Smart villages conference, The Fields Institute, 2019. </a>
+<br><br><br>
+</div>
+
+  </body>
 </html>
